Condense all cell-related textures